--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "env": {
     "es6": true,
-    "node": true
+    "node": true,
+    "jest": true
   },
   "extends": [
     "airbnb-base",
@@ -30,7 +31,8 @@
       {
         "ts":"never"
       }
-    ]
+    ],
+    "semi":"off"
   },
   "settings": {
     "import/resolver":{
