--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev --transpileOnly --ignore-watch node_modules src/server.ts"
+    "dev": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
+    "test": "jest"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuidv4": "^6.0.7"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
@@ -24,6 +26,11 @@
     "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^2.0.4",
     "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "jest": "^25.3.0",
+    "supertest": "^4.0.2",
+    "ts-jest": "^25.3.1",
+    "@types/jest": "^25.2.1",
+    "@types/supertest": "^2.0.8"
   }
 }
