--- a/package.json
+++ b/package.json
@@ -7,30 +7,30 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
+    "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
     "test": "jest"
   },
-  "dependencies": {
-    "express": "^4.17.1",
-    "uuidv4": "^6.0.7"
-  },
   "devDependencies": {
-    "@types/express": "^4.17.6",
-    "@typescript-eslint/eslint-plugin": "^2.28.0",
-    "@typescript-eslint/parser": "^2.28.1-alpha.0",
+    "@types/express": "^4.17.5",
+    "@types/jest": "^25.2.1",
+    "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-prettier": "^3.1.3",
-    "prettier": "^2.0.4",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.8.3",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.3.0",
+    "prettier": "^2.0.4",
     "supertest": "^4.0.2",
     "ts-jest": "^25.3.1",
-    "@types/jest": "^25.2.1",
-    "@types/supertest": "^2.0.8"
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "uuidv4": "^6.0.7"
   }
 }
